log
Wed 20 Mar 2024 04:55:34 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|4
total_score: 10/70
a19d876
Wed 20 Mar 2024 05:06:06 PM UTC: 
 exercises.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
3fb751d
Wed 20 Mar 2024 05:33:22 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:18: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   64 |   int elemento = first(L);
      |                  ^~~~~
exercises.c:65:19: error: comparison between pointer and integer [-Werror]
   65 |   while (elemento != NULL)
      |                   ^~
exercises.c:68:14: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   68 |     elemento = next(L);
      |              ^
cc1: all warnings being treated as errors
Compilation failed
25b51b7
Wed 20 Mar 2024 05:33:40 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:68:15: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   68 |     *elemento = next(L);
      |               ^
cc1: all warnings being treated as errors
Compilation failed
ff43d05
